[package]
name = "tokio-examples"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]

[dependencies]
tokio = "0"
futures = "0"
bytes = "0"
bincode = "1"

[[bin]]
name = "line_listening_server"
path = "src/line/listening_server.rs"

[[bin]]
name = "line_sending_client"
path = "src/line/sending_client.rs"

[[bin]]
name = "line_periodic_ping_client"
path = "src/line/periodic_ping_client.rs"

[[bin]]
name = "line_with_greetings_server"
path = "src/line/with_greetings_server.rs"

[[bin]]
name = "line_requiring_keepalive_server"
path = "src/line/requiring_keepalive_server.rs"
